Portfolio link has been update

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <li><strong>Github:<strong> 
                 <a href="https://github.com/fatihay53"
                 target=_blank>fatihay53</a></li>
-            <li><b>Portfolio:</b> <a href="#">coming soon</a></li>
+            <li><b>Portfolio:</b> <a href="https://fatihay53.github.io/my-personel-Portfolio/">fatihay53</a></li>
           </ul>
         </div>
       </div>
