portfolio link update

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 target=_blank>f.sultanay@gmail.com</a></li>
             <li><strong>Github:<strong> 
                 <a href="https://github.com/fatihay53"
-                target=_blank>fatihay53</a></li>
+                target=_blank>fatihay</a></li>
             <li><b>Portfolio:</b> <a href="https://fatihay53.github.io/my-personel-Portfolio/">fatihay53</a></li>
           </ul>
         </div>
