--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,68 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/css.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="style.css">
+
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"> </script> -->
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"> -->
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
+
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
-        <div class="container-fluid" style="margin: 15px;" >
-          <a class="navbar-brand" href="index.html">&nbsp; Fatih Sultan Ay &nbsp;</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-            <ul class="navbar-nav ">
-              <li class="nav-item">
-                <a class="nav-link" href="Contact.html">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Portfolio.html">Portfolio</a>
-              </li>        
-              <li class="nav-item">
-                <a class="nav-link active " href="index.html">About</a>
-              </li>
-            </ul>      
-          </div>
+
+
+    <nav class="navbar navbar-expand-lg navbar-light">
+
+        <div class='container-fluid'>
+
+            <a class="navbar-brand" style="margin-left: 10%;font-family: 'Pacifico', cursive; font-size: 30px;"
+                href="index.html">&nbsp; Fatih Sultan Ay &nbsp;</a>
+
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse justify-content-end collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="Contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active " href="index.html">About</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
-      <div class="container">
+    </nav>
+
+
+    <div class="container">
+        <h1 style="font-size: 50px; text-align: center;" >Portfolio</h1>
         <div class="row">
-            <div class="col-4">
-          <div class="card">
-            <img src="assets/images/photo.png" class="card-img-top" alt="Photo">
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+
+            <div class="col-6">
+
+                <a href="https://github.com/saidmg/project1">
+                    <h1 style="text-align: center; margin-bottom: 15px;"> Finance Website </h1>
+                </a>
+
+                <div class="card ">
+                    <a id="card1" target="_blank" href="https://github.com/saidmg/project1"> <img height: 600px;
+                            src="assets/images/project-1.JPG" class="card-img-top" alt="Photo">
+                    </a>
+                </div>
+
             </div>
-          </div>
+            <div class="col-6">
+                <a href="https://github.com/fatihay53/Password-Generator">
+                    <h1 style="text-align: center; margin-bottom: 15px;"> Password Generator </h1>
+                </a>
+                <div class="card">
+                    <a target="_blank" href="https://github.com/fatihay53/Password-Generator"> <img
+                            src="assets/images/password-generator.png" class="card-img-top" alt="Photo">
+                    </a>
+                </div>
+
             </div>
-          <div class="col-4">
-          <div class="card">
-            <img src="assets/images/photo.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            </div>
-          </div>
-      </div>
-      <div class="col-4">
-          <div class="card">
-            <img src="assets/images/photo.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            </div>
-              </div>
         </div>
-      </div>
-      </div>
+        <div class="row">
+            <div class="col-6">
+                <a href="https://github.com/saidmg/project1">
+                    <h1 style="text-align: center; margin-bottom: 15px;"> Weather Dashboard </h1>
+                </a>
+                <div class="card">
+                    <a target="_blank" href="https://github.com/fatihay53/Weather-Dashboard"> <img
+                            src="assets/images/weather-Dashboard.jpg" class="card-img-top" alt="Photo">
+                    </a>
+                </div>
+
+            </div>
+
+            <div class="col-6">
+                <a href="https://github.com/fatihay53/Work-Day-Scheduler">
+                    <h1 style="text-align: center; margin-bottom: 15px;"> Work Day Scheduler </h1>
+                </a>
+                <div class="card">
+                    <a target="_blank" href="https://github.com/fatihay53/Work-Day-Scheduler"> <img
+                            src="assets/images/Work-Day-Scheduler.jpg" class="card-img-top" alt="Photo">
+                    </a>
+                </div>
+
+            </div>
+
+
+        </div>
 
 
 
 
 
-    
+
+    </div>
+
+
+
+
+    </div>
+
+
 </body>
+
 </html>
