--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <!-- 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"> </script> -->
 
@@ -30,31 +30,32 @@
 
 <body>
 
-    
-    <nav class="navbar navbar-expand-lg navbar-light" >
 
-        <div class='container-fluid' >
+    <nav class="navbar navbar-expand-lg navbar-light">
 
-        <a class="navbar-brand" style="margin-left: 10%;font-family: 'Pacifico', cursive; font-size: 30px;" href="index.html">&nbsp; Fatih Sultan Ay &nbsp;</a>
+        <div class='container-fluid'>
 
-        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse justify-content-end collapse" id="navbarSupportedContent" >
-            <ul class="navbar-nav ">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="Contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active " href="index.html">About</a>
-                </li>
-            </ul>
-        </div>
+            <a class="navbar-brand" style="margin-left: 10%;font-family: 'Pacifico', cursive; font-size: 30px;"
+                href="index.html">&nbsp; Fatih Sultan Ay &nbsp;</a>
+
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse justify-content-end collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="Contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active " href="index.html">About</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -71,7 +72,7 @@
                                 src="assets/images/Profile Photo.jpg">
                         </div>
                         <div id="git">
-                            <a target="_blank" href="assets/CV-Fatih.pdf"style="color: black;">Resume</a>
+                            <a target="_blank" href="assets/CV-Fatih.pdf" style="color: black;">Resume</a>
                         </div>
                         <a target="_blank" href="https://github.com/fatihay53"> <i id="gitt" class="github icon"></i>
                         </a>
@@ -81,6 +82,10 @@
                                 class="fab fa-linkedin in icon"></i> </a>
                         <a target="_blank" href="https://twitter.com/FATIHSULTANAY1/"> <i id="gitt"
                                 class="fab fa-twitter icon"></i> </a>
+                        <a target="_blank" href="https://github.com/fatihay53"> <i id="gitt"
+                                class="fab fa-github-square"></i> </a>
+
+                     
 
                         <li style="list-style-type: none !important; "> <i style="text-align: center; margin: 5%; "
                                 class="fas fa-mobile">+1 343
