--- a/Portfolio.html
+++ b/Portfolio.html
@@ -72,7 +72,7 @@
 
                 <div class="card ">
                     <a id="card1" target="_blank" href="https://github.com/saidmg/project1"> <img height: 600px;
-                            src="assets/images/project-1.JPG" class="card-img-top" alt="Photo">
+                            src="assets/images/project-1.jpg" class="card-img-top" alt="Photo">
                     </a>
                 </div>
 
