--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 class="fab fa-google plus g icon"></i></a>
                         <a target="_blank" href="https://www.linkedin.com/in/fatih-sultan-ay-211689181/"> <i id="gitt"
                                 class="fab fa-linkedin in icon"></i> </a>
-                        <a target="_blank" href="https://twitter.com/FATIHSULTANAY1/"> <i id="gitt"
+                        <a target="_blank" href="https://twitter.com/fatihsultanay"> <i id="gitt"
                                 class="fab fa-twitter icon"></i> </a>
                         <a target="_blank" href="https://github.com/fatihay53"> <i id="gitt"
                                 class="fab fa-github-square"></i> </a>
