--- a/Portfolio.html
+++ b/Portfolio.html
@@ -66,19 +66,20 @@
 
             <div class="col-6">
 
-                <a href="https://github.com/saidmg/project1">
+                <a href="https://fatihay53.github.io/project1/">
                     <h1 style="text-align: center; margin-bottom: 15px;"> Finance Website </h1>
                 </a>
 
                 <div class="card ">
-                    <a id="card1" target="_blank" href="https://fatihay53.github.io/Bravo-Finance/"><img
+                    <a id="card1" target="_blank" href="https://github.com/fatihay53/project1"><img
                         src="assets/images/project-1.jpg" class="card-img-top" alt="Photo">
                     </a>
                 </div>
+                
 
             </div>
             <div class="col-6">
-                <a href="https://github.com/fatihay53/Password-Generator">
+                <a href="https://fatihay53.github.io/Password-Generator/">
                     <h1 style="text-align: center; margin-bottom: 15px;"> Password Generator </h1>
                 </a>
                 <div class="card">
@@ -91,7 +92,7 @@
         </div>
         <div class="row">
             <div class="col-6">
-                <a href="https://github.com/saidmg/project1">
+                <a href="https://fatihay53.github.io/Weather-Dashboard/">
                     <h1 style="text-align: center; margin-bottom: 15px;"> Weather Dashboard </h1>
                 </a>
                 <div class="card">
@@ -103,7 +104,7 @@
             </div>
 
             <div class="col-6">
-                <a href="https://github.com/fatihay53/Work-Day-Scheduler">
+                <a href="https://fatihay53.github.io/Work-Day-Scheduler/">
                     <h1 style="text-align: center; margin-bottom: 15px;"> Work Day Scheduler </h1>
                 </a>
                 <div class="card">
