--- a/Portfolio.html
+++ b/Portfolio.html
@@ -66,12 +66,12 @@
 
             <div class="col-6">
 
-                <a href="https://fatihay53.github.io/project1/">
+                <a href="https://github.com/fatihay53/Essential-Finance">
                     <h1 style="text-align: center; margin-bottom: 15px;"> Finance Website </h1>
                 </a>
 
                 <div class="card ">
-                    <a id="card1" target="_blank" href="https://github.com/fatihay53/project1"><img
+                    <a id="card1" target="_blank" href="https://fatihay53.github.io/Essential-Finance/"><img
                         src="assets/images/project-1.jpg" class="card-img-top" alt="Photo">
                     </a>
                 </div>
