--- a/Portfolio.html
+++ b/Portfolio.html
@@ -96,8 +96,8 @@
                     <h1 style="text-align: center; margin-bottom: 15px;"> Weather Dashboard </h1>
                 </a>
                 <div class="card">
-                    <a target="_blank" href="https://github.com/fatihay53/Weather-Dashboard"> <img
-                            src="assets/images/weather-Dashboard.jpg" class="card-img-top" alt="Photo">
+                    <a target="_blank" href="https://github.com/fatihay53/burger-app"> <img
+                            src="assets/images/burgerapp.jpg" class="card-img-top" alt="Photo">
                     </a>
                 </div>
 
