Burger app added in project list

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -93,7 +93,7 @@
         <div class="row">
             <div class="col-6">
                 <a href="https://fatihay53.github.io/Weather-Dashboard/">
-                    <h1 style="text-align: center; margin-bottom: 15px;"> Weather Dashboard </h1>
+                    <h1 style="text-align: center; margin-bottom: 15px;"> Burger Restaurant </h1>
                 </a>
                 <div class="card">
                     <a target="_blank" href="https://github.com/fatihay53/burger-app"> <img
