Note Taker added in list

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -79,11 +79,11 @@
 
             </div>
             <div class="col-6">
-                <a href="https://fatihay53.github.io/Password-Generator/">
-                    <h1 style="text-align: center; margin-bottom: 15px;"> Password Generator </h1>
+                <a href="https://library-management-system-lms.herokuapp.com/index.html">
+                    <h1 style="text-align: center; margin-bottom: 15px;"> Library Management System </h1>
                 </a>
                 <div class="card">
-                    <a target="_blank" href="https://github.com/fatihay53/Password-Generator"> <img
+                    <a target="_blank" href="https://github.com/fatihay53/library-management-system"> <img
                             src="assets/images/password-generator.png" class="card-img-top" alt="Photo">
                     </a>
                 </div>
@@ -116,6 +116,32 @@
             </div>
 
 
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <a href="https://fatihay53.github.io/Password-Generator/">
+                    <h1 style="text-align: center; margin-bottom: 15px;"> Password Generator </h1>
+                </a>
+                <div class="card">
+                    <a target="_blank" href="https://github.com/fatihay53/Password-Generator"> <img
+                            src="assets/images/password-generator.png" class="card-img-top" alt="Photo">
+                    </a>
+                </div>
+
+            </div>
+            <div class="col-6">
+                <a href="https://note-takers-app.herokuapp.com/">
+                    <h1 style="text-align: center; margin-bottom: 15px;"> Note Taker </h1>
+                </a>
+                <div class="card">
+                    <a target="_blank" href="https://github.com/fatihay53/Note-Takers"> <img
+                            src="assets/images/password-generator.png" class="card-img-top" alt="Photo">
+                    </a>
+                </div>
+
+            </div>
+
+            
         </div>
 
 
