--- a/Portfolio.html
+++ b/Portfolio.html
@@ -83,7 +83,7 @@
                     <h1 style="text-align: center; margin-bottom: 15px;"> Burger Restaurant </h1>
                 </a>
                 <div class="card">
-                    <a target="_blank" href="https://github.com/fatihay53/burger-app"> <img
+                    <a target="_blank" href="https://burger-eat-application.herokuapp.com/"> <img
                             src="assets/images/burgerapp.jpg" class="card-img-top" alt="Photo">
                     </a>
                 </div>
@@ -95,22 +95,22 @@
          
 
             <div class="col-6">
-                <a href="https://fatihay53.github.io/Work-Day-Scheduler/">
+                <a href="https://github.com/fatihay53/Work-Day-Scheduler">
                     <h1 style="text-align: center; margin-bottom: 15px;"> Work Day Scheduler </h1>
                 </a>
                 <div class="card">
-                    <a target="_blank" href="https://github.com/fatihay53/Work-Day-Scheduler"> <img
+                    <a target="_blank" href="https://fatihay53.github.io/Work-Day-Scheduler/"> <img
                             src="assets/images/Work-Day-Scheduler.jpg" class="card-img-top" alt="Photo">
                     </a>
                 </div>
 
             </div>
             <div class="col-6">
-                <a href="https://fatihay53.github.io/Password-Generator/">
+                <a href="https://github.com/fatihay53/Password-Generator">
                     <h1 style="text-align: center; margin-bottom: 15px;"> Password Generator </h1>
                 </a>
                 <div class="card">
-                    <a target="_blank" href="https://github.com/fatihay53/Password-Generator"> <img
+                    <a target="_blank" href="https://fatihay53.github.io/Password-Generator/"> <img
                             src="assets/images/password-generator.png" class="card-img-top" alt="Photo">
                     </a>
                 </div>
